--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,8 +1,8 @@
-.container-fluid
+%section.container-fluid
     %footer.pt-4.my-md-5.pt-md-5.border-top
         .row
             .col-6.col-md-3.offset-md-3.text-center
-                %h5 Data Sources
+                .h5 Data Sources
                 %ul.list-unstyled.text-small
                     %li
                         %a.text-muted{ href: 'https://developers.google.com/civic-information',
@@ -11,7 +11,7 @@
                         %a.text-muted{ href: 'https://www.census.gov/data.html',
                         target: :_blank } Census.gov
             .col-6.col-md-3.text-center
-                %h5 API Resources
+                .h5 API Resources
                 %ul.list-unstyled.text-small
                     %li
                         %a.text-muted{ href: 'https://gnews.io/',
