--- a/app/javascript/stylesheets/map.scss
+++ b/app/javascript/stylesheets/map.scss
@@ -1,9 +1,10 @@
 // Hovering over a map region should make the mouse cursor a pointer and highlight the region with blue color.
-path:hover, circle:hover {
-    stroke: #2780E3 !important;
+path:hover, circle:hover,
+path:focus, circle:focus {
+    stroke: var(--primary) !important;
     stroke-width:2px;
     stroke-linejoin: round;
-    fill: #2780E3 !important;
+    fill: var(--primary) !important;
     cursor: pointer;
 }
 
