--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html
+%html{ lang: 'en' }
     %head
         %meta{ content: 'text/html; charset=UTF-8', 'http-equiv': 'Content-Type' }/
         %meta{ content: 'width=device-width, initial-scale=1.0, shrink-to-fit=no', name: 'viewport' }/
@@ -13,7 +13,7 @@
         .d-flex.flex-column.min-vh-100
             .flex-shrink-0
                 = render 'layouts/navbar'
-            .flex-grow-1
+            %main.flex-grow-1
                 .container-fluid
                     - if flash[:notice].present? || flash[:alert].present?
                         .row.my-4#actionmap-flash-container
