--- a/app/views/login/login.html.haml
+++ b/app/views/login/login.html.haml
@@ -2,7 +2,7 @@
     .col-sm-9.col-md-7.col-lg-5.mx-auto
         .card.card-signin.my-5
             .card-body
-                %span.d-block.display-4.card-title.text-center Sign In
+                %h1.d-block.display-4.card-title.text-center Sign In
                 .alert.alert-primary.text-center{ role: :alert }
                     Select an authentication provider below to login.
                 = form_tag '/auth/google_oauth2', method: :post do
